Support nested function in SELECT clause (#1490)
Users can now query nested fields in an index.

---------

Signed-off-by: forestmvey <forestv@bitquilltech.com>